--- a/app/src/main/res/layout/activity_decoration_sample.xml
+++ b/app/src/main/res/layout/activity_decoration_sample.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
-        android:id="@+id/refreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<!--    <com.ajguan.library.EasyRefreshLayout-->
+<!--    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout-->
 <!--        android:id="@+id/refreshLayout"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent">-->
+    <com.ccooy.expandablerecyclerview.decoration.library.EasyRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <!--    <com.scwang.smartrefresh.layout.SmartRefreshLayout-->
 <!--        android:id="@+id/refreshLayout"-->
 <!--        android:layout_width="match_parent"-->
@@ -23,14 +23,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 <!--    </com.scwang.smartrefresh.layout.SmartRefreshLayout>-->
-<!--    </com.ajguan.library.EasyRefreshLayout>-->
-    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+    </com.ccooy.expandablerecyclerview.decoration.library.EasyRefreshLayout>
+<!--    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>-->
 
-<com.ccooy.expandablerecyclerview.decoration.widget.StickyHeaderLayout
-    android:id="@+id/sticky_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</com.ccooy.expandablerecyclerview.decoration.widget.StickyHeaderLayout>
+    <com.ccooy.expandablerecyclerview.decoration.widget.StickyHeaderLayout
+        android:id="@+id/sticky_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.ccooy.expandablerecyclerview.decoration.widget.StickyHeaderLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="58dp"
